--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+aiofiles==23.2.1
 aiohttp==3.9.3
 aiosignal==1.3.1
+altair==5.2.0
 annotated-types==0.6.0
 anyio==4.3.0
 asgiref==3.7.2
@@ -17,15 +19,21 @@ chromadb==0.4.22
 click==8.1.7
 colorama==0.4.6
 coloredlogs==15.0.1
+contourpy==1.2.0
+cycler==0.12.1
 dataclasses-json==0.6.4
 Deprecated==1.2.14
 fastapi==0.109.2
+ffmpy==0.3.2
 filelock==3.13.1
 flatbuffers==23.5.26
+fonttools==4.49.0
 frozenlist==1.4.1
 fsspec==2024.2.0
 google-auth==2.28.0
 googleapis-common-protos==1.62.0
+gradio==4.19.2
+gradio_client==0.10.1
 greenlet==3.0.3
 grpcio==1.60.1
 h11==0.14.0
@@ -37,15 +45,23 @@ humanfriendly==10.0
 idna==3.6
 importlib-metadata==6.11.0
 importlib-resources==6.1.1
+Jinja2==3.1.3
 jsonpatch==1.33
 jsonpointer==2.4
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
 kubernetes==29.0.0
 langchain==0.1.8
 langchain-community==0.0.21
 langchain-core==0.1.24
 langsmith==0.1.3
 lxml==5.1.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 marshmallow==3.20.2
+matplotlib==3.8.3
+mdurl==0.1.2
 mmh3==4.1.0
 monotonic==1.6
 mpmath==1.3.0
@@ -65,8 +81,11 @@ opentelemetry-proto==1.22.0
 opentelemetry-sdk==1.22.0
 opentelemetry-semantic-conventions==0.43b0
 opentelemetry-util-http==0.43b0
+orjson==3.9.14
 overrides==7.7.0
 packaging==23.2
+pandas==2.2.0
+pillow==10.2.0
 posthog==3.4.2
 protobuf==4.25.3
 pulsar-client==3.4.0
@@ -74,15 +93,26 @@ pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pydantic==2.6.1
 pydantic_core==2.16.2
+pydub==0.25.1
+Pygments==2.17.2
+pyparsing==3.1.1
 PyPika==0.48.9
 pyproject_hooks==1.0.0
 pyreadline3==3.4.1
 python-dateutil==2.8.2
 python-dotenv==1.0.1
+python-multipart==0.0.9
+pytz==2024.1
 PyYAML==6.0.1
+referencing==0.33.0
 requests==2.31.0
 requests-oauthlib==1.3.1
+rich==13.7.0
+rpds-py==0.18.0
 rsa==4.9
+ruff==0.2.2
+semantic-version==2.10.0
+shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
@@ -91,15 +121,19 @@ starlette==0.36.3
 sympy==1.12
 tenacity==8.2.3
 tokenizers==0.15.2
+tomlkit==0.12.0
+toolz==0.12.1
 tqdm==4.66.2
 typer==0.9.0
 typing-inspect==0.9.0
 typing_extensions==4.9.0
+tzdata==2024.1
 urllib3==2.2.1
 uvicorn==0.27.1
+uvloop==0.19.0
 watchfiles==0.21.0
 websocket-client==1.7.0
-websockets==12.0
+websockets==11.0.3
 wikipedia==1.4.0
 wrapt==1.16.0
 yarl==1.9.4
